Fixed footer layout. WIP header layout. Fixed footer on mobile.

--- a/frontend/scss/style.global.scss
+++ b/frontend/scss/style.global.scss
@@ -1,7 +1,3 @@
-header, footer {
-  background-color: lightblue;
-}
-
 #root {
   height: 100vh;
 
@@ -16,18 +12,26 @@ header, footer {
 
 header {
   grid-area: header;
+  background-color: white;
+  box-shadow: 5px 5px 50px -20px #000000;
 }
 
 main {
   grid-area: main;
-  padding: 15px 10px 15px 10px;
+  padding: 15px 10px 35px 10px;
+  margin-bottom: 68px;
   overflow: auto;
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+
   background-color: white;
   grid-area: footer;
   box-shadow: 5px 5px 50px -10px #000000;
+  z-index: 100;
 }
 
 article {
